--- a/your-code/pandas_1_concat-merge-join.ipynb
+++ b/your-code/pandas_1_concat-merge-join.ipynb
@@ -79,11 +79,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    A   B   C\n",
+      "0  a0  b0  c0\n",
+      "1  a1  b1  c1\n",
+      "2  a2  b2  c2\n",
+      "3  a3  b3  c3\n",
+      "4  a4  b4  c4\n",
+      "5  a5  b5  c5\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "combined_df1_df2 = pd.concat([df1, df2])\n",
+    "\n",
+    "print(combined_df1_df2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    D   E   F\n",
+      "0  d0  e0  f0\n",
+      "1  d1  e1  f1\n",
+      "2  d2  e2  f2\n",
+      "3  d3  e3  f3\n",
+      "4  d4  e4  f4\n",
+      "5  d5  e5  f5\n"
+     ]
+    }
+   ],
+   "source": [
+    "combined_df3_df4 = pd.concat([df3, df4])\n",
+    "\n",
+    "print(combined_df3_df4)"
    ]
   },
   {
@@ -99,11 +140,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     A    B    C    D    E    F\n",
+      "0   a0   b0   c0  NaN  NaN  NaN\n",
+      "1   a1   b1   c1  NaN  NaN  NaN\n",
+      "2   a2   b2   c2  NaN  NaN  NaN\n",
+      "3   a3   b3   c3  NaN  NaN  NaN\n",
+      "4   a4   b4   c4  NaN  NaN  NaN\n",
+      "5   a5   b5   c5  NaN  NaN  NaN\n",
+      "0  NaN  NaN  NaN   d0   e0   f0\n",
+      "1  NaN  NaN  NaN   d1   e1   f1\n",
+      "2  NaN  NaN  NaN   d2   e2   f2\n",
+      "3  NaN  NaN  NaN   d3   e3   f3\n",
+      "4  NaN  NaN  NaN   d4   e4   f4\n",
+      "5  NaN  NaN  NaN   d5   e5   f5\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "combined_df1_df2_df3_df4 = pd.concat ([df1, df2, df3, df4])\n",
+    "\n",
+    "print(combined_df1_df2_df3_df4)"
    ]
   },
   {
@@ -122,11 +185,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      A    B    C    D    E    F\n",
+      "0    a0   b0   c0  NaN  NaN  NaN\n",
+      "1    a1   b1   c1  NaN  NaN  NaN\n",
+      "2    a2   b2   c2  NaN  NaN  NaN\n",
+      "3    a3   b3   c3  NaN  NaN  NaN\n",
+      "4    a4   b4   c4  NaN  NaN  NaN\n",
+      "5    a5   b5   c5  NaN  NaN  NaN\n",
+      "6   NaN  NaN  NaN   d0   e0   f0\n",
+      "7   NaN  NaN  NaN   d1   e1   f1\n",
+      "8   NaN  NaN  NaN   d2   e2   f2\n",
+      "9   NaN  NaN  NaN   d3   e3   f3\n",
+      "10  NaN  NaN  NaN   d4   e4   f4\n",
+      "11  NaN  NaN  NaN   d5   e5   f5\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "combined_df1_df2_df3_df4_ignore = pd.concat ([df1, df2, df3, df4], ignore_index=True)\n",
+    "\n",
+    "print(combined_df1_df2_df3_df4_ignore)"
    ]
   },
   {
@@ -150,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +310,7 @@
        "2  i2  a2  b2"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +380,7 @@
        "2  i3  c3  d3"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,11 +405,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>idx</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>i0</th>\n",
+       "      <td>a0</td>\n",
+       "      <td>b0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>i1</th>\n",
+       "      <td>a1</td>\n",
+       "      <td>b1</td>\n",
+       "      <td>c1</td>\n",
+       "      <td>d1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>i2</th>\n",
+       "      <td>a2</td>\n",
+       "      <td>b2</td>\n",
+       "      <td>c2</td>\n",
+       "      <td>d2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      A   B    C    D\n",
+       "idx                  \n",
+       "i0   a0  b0  NaN  NaN\n",
+       "i1   a1  b1   c1   d1\n",
+       "i2   a2  b2   c2   d2"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "left.set_index('idx').join(right.set_index('idx'))"
    ]
   },
   {
@@ -374,7 +532,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -388,7 +546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.13.5"
   },
   "toc": {
    "base_numbering": 1,
